--- a/host-app/src/pages/HomePage.css
+++ b/host-app/src/pages/HomePage.css
@@ -1,6 +1,8 @@
+
 .home-container {
   padding: 16px;
   text-align: center;
+  height: 100%; /* Устанавливаем 100% высоты для body и html */
 }
 
 .home-title {
